# a5py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
a5py/: __init__.py  a5_connection.py  abm.py  config.py
a5py/a5_tables/: __init__.py  a5_base.py  areas.py  observaciones_abstract.py  observaciones_areal.py  observaciones_rast.py  series_abstract.py  series_areal.py  series_rast.py
src/a5py/: __init__.py  a5_connection.py
src/a5py/util/: util.py
tests/: test_db.py  test_valor_is_bytes.py
